# dirinfo

./: Cargo.toml  README.md
src/: cli.rs  dir.rs  info.rs  lib.rs  main.rs
src/dir/: dir_walker.rs  mod.rs
tests/: number_of_files.rs
