[package]
name = "dirinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
file-size = "1.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1"
assert_fs = "1.1"
